test/Harper/Tests/Bad/issue6_nonExh.Har
value List a = {
  variant Empty = { };
  
  variant NonEmpty = {
    data = {
      head :: a;
      tail :: List a;
    }
  };
};

cons x xs = val NonEmpty { head = x, tail = xs };

empty = val Empty {};

list = cons 42 empty;

main = 
  match list {
    NonEmpty { head: 17 } => 42,
    Empty {} => 0
  };