test/Harper/Tests/Bad/issue6_nonExh.out
Error: non exhaustive pattern match.
During evaluation of
 match list {
   NonEmpty { head: 17 } => 42,
   Empty {} => 0
 };

Located at line 2 column 3

Execution terminated with an error: runtime error.